--- a/final.css
+++ b/final.css
@@ -41,3 +41,4 @@ input[type="submit"] {margin-left: 350px;width: 100px;}
 .carphotos img {max-width: 750px; height: auto;}
 .merch {text-align: left;}
 .merch img {max-width: 400px; height: auto;}
+.second {float: left;}
